--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,35 @@ justify-content: center;
 align-self: center;
   border: 1px dashed black;
 }
+
+.gallery .top-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+ .plans {
+  margin:0 auto;
+  padding-top: 80px;
+  width: 1200px;
+  max-width: 100%;
+ }
+.gallery {
+  margin: 0 auto;
+  width: 1200px;
+  max-width: 100%;
+}
+.card {
+  width: calc(100% / 3 - 20px);
+  height: 600px;
+  position: relative;
+  margin: 10px;
+  border: 1px dashed brown;
+}
+ .card .title-card {
+  width: 100%;
+  height: 50px;
+  position: relative;
+  margin: 0;
+  border: 1px dashed brown;
+
+ }
