correzione background-color dei bottoni

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,10 +53,11 @@ font-size: 1.1rem;
   padding: 12px;
   padding-left: 90px;
   padding-right: 90px;
-  background-color: 0062FE;
+  background-color: #0062FE;
   width: fit-content;
   font-size: 1.2rem;
   color: white;
+
   margin-top: 25px;
   margin-bottom: 25px;
 }
@@ -67,7 +68,7 @@ font-size: 1.1rem;
   padding: 12px;
   padding-left: 50px;
   padding-right: 50px;
-  background-color: 0062FE;
+  background-color: #0062FE;
   width: fit-content;
   font-size: 1.2rem;
   color: white;
@@ -123,7 +124,7 @@ font-size: 1.1rem;
   padding: 12px;
   padding-left: 30px;
   padding-right: 30px;
-  background-color: 0062FE;
+  background-color: #0062FE;
   width: fit-content;
   font-size: 1.2rem;
   color: white;
